# itinrary-builder

./: .gitignore  Cargo.toml
doc/: architecture.md
src/: Infrastructure.rs  api.rs  config.rs  db.rs  db_tmp.rs  domain.rs  flight_info.rs  initbuilder.json  itinbuilder.json  itinbuilder.py  main.rs  other.rs  runtime_paths.rs  services.rs  structure.rs  utils.rs
src/Infrastructure/: db.rs  file_loader.rs
src/Infrastructure/db/: model.rs  repository.rs
src/Infrastructure/db/model/: airport_row.rs  flight_row.rs  mct_row.rs
src/Infrastructure/db/repository/: airport_repo.rs  cache_repo.rs  flight_repo.rs  mct_repo.rs  route_repo.rs
src/Infrastructure/db/surrealDB/: connection.rs
src/Infrastructure/file_loader/: dei.rs  mct_parser.rs  oag_parser.rs  ssim_loader.rs
src/api/: airport.rs  cache.rs  cache_builder.rs  flight.rs  ib.rs  schedule.rs
src/api/airport/: add_airport.rs
src/api/schedule/: add_schedule.rs
src/api/utils/: health_check.rs
src/config/: application.rs  configuration.rs  database.rs  log.rs
src/domain/: airport.rs  cache.rs  flight.rs  flightplan.rs  itinerary.rs  mct.rs  route.rs  time.rs
src/memory/: core.rs
src/services/: data_service.rs
src/services/data_service/: import_sch.rs
src/services/search_service/: search_flight.rs
src/sql/: search_IB.cql
