[package]
name = "itinbuilder"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.140"
sqlx = {version = "0.8.6",features = ["runtime-async-std-native-tls","postgres", "uuid", "chrono"]}
actix-web = "4"
actix-multipart = "0.7.2"
log = "0.4"
log4rs = "1.3.0"
neo4rs = "0.8.0"