[package]
name = "itinbuilder"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

[dependencies]
chrono = "0.4.41"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.140"
actix-web = "4"
actix-multipart = "0.7.2"
log = "0.4"
log4rs = "1.3.0"
surrealdb = "3.0.0-beta.2"
chrono-tz = "0.10.0"
geo="0.32.0"
anyhow = "1.0.100"
surrealdb-types = "3.0.0-beta.2"